--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ wp-config.php
 # uncomment the next line
 #/wp-content/themes
 .DS_Store
+
+# Markdown files (ignore all except README.md)
+*.md
+!README.md
